fix(front): don't use css transition on toggle menu visibility

--- a/javascript/apps/taiga/src/app/modules/project/feature-navigation/components/project-navigation-menu/project-navigation-menu.component.css
+++ b/javascript/apps/taiga/src/app/modules/project/feature-navigation/components/project-navigation-menu/project-navigation-menu.component.css
@@ -354,7 +354,7 @@ ul {
 
   & .main-project-nav {
     inline-size: var(--inline-btn-size);
-    transition: all var(--transition);
+    transition: inline-size var(--transition);
     transition-delay: 300ms;
   }
 
@@ -388,7 +388,7 @@ ul {
   & .menu-option-icon,
   & .scrum-button-icon {
     margin-inline-end: 0;
-    transition: all var(--transition);
+    transition: margin var(--transition);
     transition-delay: var(--transition-delay);
   }
 
